# trade_diary

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  backup.py  compose.yaml  pyproject.toml  run.py
src/trade_diary/: __init__.py  app.py  backup.py  config.py  config.toml  db_interface.py  utility_functions.py  validate.py
src/trade_diary/assets/: custom.css
src/trade_diary/pages/: stats.py  trades.py  trades_ui.py  upload.py
