[project]
name = "trade-diary"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dash>=3.1.1",
    "dash-ag-grid>=32.3.0",
    "dash-bootstrap-components>=2.0.3",
    "dotenv>=0.9.9",
    "dropbox>=12.0.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pytest>=8.4.1",
    "selenium>=4.35.0",
    "sqlalchemy>=2.0.41",
    "toml>=0.10.2",
    "yfinance>=0.2.65",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
    "jupyter>=1.1.1",
]
